# ChangeLog for app-misc/datovka
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/datovka/ChangeLog,v 1.11 2012/12/20 14:18:46 scarabeus Exp $

*datovka-3.0.2 (20 Dec 2012)

  20 Dec 2012; Tomáš Chvátal <scarabeus@gentoo.org> +datovka-3.0.2.ebuild,
  -datovka-3.0.1.ebuild:
  Version bump to 3.0.2, upstream is fast in brown paperbag releases.

*datovka-3.0.1 (20 Dec 2012)

  20 Dec 2012; Tomáš Chvátal <scarabeus@gentoo.org> +datovka-3.0.1.ebuild:
  Version bump to latest.

  04 Sep 2012; Tomáš Chvátal <scarabeus@gentoo.org> -datovka-2.1.1.ebuild,
  datovka-2.1.2.ebuild:
  Stabilise on amd64 and x86. Drop older.

*datovka-2.1.2 (16 Aug 2012)

  16 Aug 2012; Tomáš Chvátal <scarabeus@gentoo.org> +datovka-2.1.2.ebuild,
  -datovka-2.0.2.ebuild, datovka-2.1.1.ebuild:
  Version bump. Stabilise 2.1.1 on amd64 and x86. Drop older.

*datovka-2.1.1 (18 Jul 2012)

  18 Jul 2012; Tomáš Chvátal <scarabeus@gentoo.org> +datovka-2.1.1.ebuild:
  Version bump to latest

  26 Apr 2012; Tomáš Chvátal <scarabeus@gentoo.org> -datovka-1.7.ebuild,
  datovka-2.0.2.ebuild:
  Stabilise on amd64 and x86.

*datovka-2.0.2 (21 Mar 2012)

  21 Mar 2012; Tomáš Chvátal <scarabeus@gentoo.org> +datovka-2.0.2.ebuild,
  -datovka-2.0.ebuild:
  Version bump to latest bugfix release. Drop older.

*datovka-2.0 (28 Feb 2012)

  28 Feb 2012; Tomáš Chvátal <scarabeus@gentoo.org> +datovka-2.0.ebuild:
  Version bump to 2.0.

  19 Feb 2012; Tomáš Chvátal <scarabeus@gentoo.org> metadata.xml:
  maintain

  17 Feb 2012; Tomáš Chvátal <scarabeus@gentoo.org> datovka-1.7.ebuild:
  Stable 1.7 on amd64 and x86.

*datovka-1.7 (05 Dec 2011)

  05 Dec 2011; Tomáš Chvátal <scarabeus@gentoo.org> +datovka-1.7.ebuild,
  +metadata.xml:
  Version bump to dsgui 1.7 renamed to datovka.

  11 Nov 2011; Tomáš Chvátal <scarabeus@gentoo.org> metadata.xml:
  Drop me from maint.

*dsgui-1.6.3 (05 Oct 2011)
