@@ -3,24 +3,26 @@ Hash: SHA256
 
 DIST datovka-2.1.2.tar.gz 998633 SHA256 54951627d990bca92894c76fdb4f0c6c55bdb1fa3791117ccafad58ba4c76900 SHA512 3335d9333e6a800f32d58fb30e7d806722ad07b868579bd165658e411c0b5d027ca0292c0e562ecaf72837ed4205e9119444b21305c990ec492bbacaacc313de WHIRLPOOL 93b89166f7be9ce2763f91ca8dc0c8d9b77da8d5e04b75df00ec0614166305df297c7f71f521387899aeec7e3faf0ca5cae5c986d748105a609ed8520a6af065
 DIST datovka-3.0.2.tar.gz 671108 SHA256 f9a709e8bf45d90f4e2cad779614efe7b754fbfc3024ba2bcf995354141fa860 SHA512 be839814ef210333ffa71aeb38e0c01812d047e100d6346aadea05ed17401dcb8dd0cc625b4dbfeddea79d62d8f16aed7970a84a6e161c91b23c78812c5c5344 WHIRLPOOL 0945d7bf9f94b6e9936a50957b7196ff1105797608ff1d23a447d8c447eaeb4baf7eaa705b46559de2e580559f6a532c1cbf98de40a6f8b86a5e3a69dc8b23f6
+DIST datovka-3.0.3.tar.gz 671555 SHA256 96bbc89fb2fe0c6a306d80260945b1b4eb089a061f9e324139b9a238d8588c3c SHA512 c3dfa23125849fb1c5691a4ad6077fedd307b8c0417c72e014876f56c1185a2da73478927fb594cac45ada77a71a3798f57a75032a4d83cd81c194fe3257397d WHIRLPOOL 4ab43452a51130ce021fd23e292f6922cd6d16670b8e65f270747b75b35b8fd085962fe6086ed3ae8f0797e4e764e5e403b7694dd82396a7c1d2b4dacb81262f
 EBUILD datovka-2.1.2.ebuild 970 SHA256 5250a1846f99e4c457dfed8f27f2a4f13b4a6ac588086dcf00f55843d4ef1515 SHA512 df8b92d77bc7850515e68ecf71c12e62f6e7822830499444512eb4e3699721f9c2449956ba98a58b1e030f3b02ad29c2be8472238fc16061ce7067fb30dcfc61 WHIRLPOOL 6509672bc8123aa4cbaa67cd0da7b705c17634a9fd0d4e1adb1d55751a8914e206aeb5d544692747e4ccc3e609e06feedb1325da3073f349eca12089ebb139c5
 EBUILD datovka-3.0.2.ebuild 802 SHA256 e456d81f6dd64367bea164e1a1e111a48844d24814d5e64b48f95b77af2201a8 SHA512 6599a02a41c4613e80c00319887e63a5fe6ecc4df89bd42b9f5817550cdb0276fcfd2b7840c540635badecc84231ce8a6e051605ac3691d0efd4bf3b6b97e6ca WHIRLPOOL ad8c0bfc6078d8b18fcb3a1543b7c7bfeab960c5196662e51ff000294efb165be4b3a7cfc2f48eeede8e0dfb26b9303a654dbe08236d3db03616694588f444b8
-MISC ChangeLog 2118 SHA256 841d730d300946ec5eeaa5fd7ae3d53817f9338969fca2202e97a9134afcc9de SHA512 d9298a9b01790beb37b0b5c187dac740699c755f2afb2112d059e9679fc41a06824be4cc9020f441b29dc74762300e82d95ea800aafc593f515ba924edc6fbbf WHIRLPOOL 44d6feccecf5c35fd4063f6b62a8ce65dc52564c166c99f44e2597ee26d1154a188e989926b8eaf364495b2d46715996ea94e4e2d5da2627d92a851831326e73
+EBUILD datovka-3.0.3.ebuild 802 SHA256 79a74132fb823a29b10ab0b559a551fdb71489babc49fe0622f72244814f0b15 SHA512 a278adbe05da0f1a95ba5c4509dd31531b7578774e5addc9918186c5434b54e25fd0a8ed3ec221d2a88419a0a0139e272a208c3e7184f0d8a6f7a7a3f99e5381 WHIRLPOOL 5e634e5d90a74835e3e22cb355100cda72a98bb8256f63bca957c2b87530bb2a7f83657fabf87b56bf8ba4b403237f55b7e2671710199da5d0f57815514cfae9
+MISC ChangeLog 2253 SHA256 ae83aab054d57a0239f8fbf1c7f91ff7ff11df851efb19505bba4ed57410718b SHA512 08fd858ba4c0e11719bfe00552b4e1b5da8ded879ae740472612210e0666ba79b1d1ad730177206d8e988776e88fe4552685d28b02f4debcb69b86b0e0e99135 WHIRLPOOL eb3c24b7513e59d83371b460aa69ae508eb15d7b1f760df73ac2378881a2496f2c6b4452a765561b992847250503422b3f678c0497efee080a3550188fab4643
 MISC metadata.xml 426 SHA256 12f33880362049c0969c1288ed82a7d3a4ca19f4bfb71fdccac922bb51fce1e2 SHA512 6e2d0636d4bc23e282d362a46b0b6aa0d7392a0f22f27551e2d89054796ec7f512e476f325de20bdac44f3ce3876629d04d7983ec0ac62f7b5e9cf4084c45c81 WHIRLPOOL 5b51f58b8ea2eccbbdc263d9f0a17740cbdba220d1ba5dcfb7c04a0d33e8fb4e70992edccfa50679660a67b347fc91847d41f74779de9bc3f850993a5cb24528
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCAAGBQJQ0x4jAAoJEOSiRoyO7jvoMIAP/jcSPO8qMSziaoxiLM0//bI5
-N42FAKdSkUsjTTPjl5stOxeI8Cbs/i9H22ZetHEB4i+oZm7VsVDO/cQ8zvIkX4Go
-5oLoKnm2AkMATLnuBdTRp1Oyg1xkN9f7BC1/7d+eOH1jMd9HzIuEYoWBeP1sqRqn
-2lu03StHOnNWRR1CTkqVH3cTdW1flQSJQnl8j74e11noudBImDaVkB66BG2FMpY2
-hWoI20IFPp90b8A+EhY3SR80DYtfVCTi/HIzPg0bRUOE3xc2XnzP86rSPXySdq12
-6lJQBGMvnmGejxGFIHZSEuz93dqRtpgFZQ5U+woIgxiNXwHDy75vDUyX/qP6Zn71
-t+f+IT8g1HFgQWm2q8MP7RIGZGfChMjv5KTtHS6rRM6ylH0kKxUmwLDtZuBZ2gmN
-fO8VCm3oX4nnRUB/c0vhHEAvWibAt3ELTuuy4mxXpUqC+aLF1c34kQFx2TGg2jd3
-6UOIoboLGePyLhZvgP17jwwtkVY9KzX3XYWk5ZppnrxBj1DEdM3HmPB6M2iWXYHD
-xCGFTZmHscrgm87fxFaB0Z3e5WhvPmixkXKN6Ss/Akal2yYg8U0q5LufpFgEYZJ4
-7pEL314hpBYL4U5cBVK53LDv9WjjRKd8eoIMQnE4jOtg2OMPs0U6NXp9jhFuXpex
-6FsLevSfkBTkrI/qNVGS
-=f6tR
+iQIcBAEBCAAGBQJQ6rglAAoJEOSiRoyO7jvoGSkP/0tN3ntHelch6tY89ZnfUSLL
+0sycxB/iXk6DFAncMHdE2jDo9GULlkDPSZ5Sob+MGXjaWG59qZiBeI3Ze+zaTXpd
+ViAUIONH9a6+bMfd20frmMmdEUTr3nTLaHoIxAoN0156ohi8J75U17bBGnviukSq
+8BG5nbY/NghLZU7EAyO+bTPJYgv6Ol5/mrwQzi6wzDs4NGqjgqzADHcbPdO7h3dD
+MRsW++c6tOa8OmzLHKLR4i7EKiCuqv0PrvsQReNei4QJGN86bzpty5h+mJXq7bQH
+kf2GFm9cJmQO1KVLTBhYpjyzx3FiM2NopH41dwZ97B06fl2U/caC81y4ridot+cI
+Psfv0MRQM754UUNY8KrwGm1APR7oliKP5uApCYGEKqNCDXeQyIY7QcA496DaMwHs
+IkJyUkbTL9EQBYyFS1N8sG/nRofaW0ChzUgousgy5/kejXpZdilosQ+vgoa5Bx0y
+24bxF2fWhKWDLJgeTTFlZE3kb44ZCPr7gH5JM3SekbkUq7UMNvGhsqlpSkBZomxg
+cIX0R2g6a62NYIVKz/++mjW5/RVkDy2vAnHBWRbS8GW6CoZU4d3tXmFGQ6roLwnq
+JrLMvsL/FNHwbxrSYu76ZFKInwBp34wMs/bf8n88ZumS5u3zM+UWgRRbjXubTt67
+l0EAHp0Z7wBofN0sqNir
+=IJEA
 -----END PGP SIGNATURE-----
