@@ -1,6 +1,11 @@
 # ChangeLog for app-misc/datovka
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/datovka/ChangeLog,v 1.11 2012/12/20 14:18:46 scarabeus Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-misc/datovka/ChangeLog,v 1.12 2013/01/07 11:56:32 scarabeus Exp $
+
+*datovka-3.0.3 (07 Jan 2013)
+
+  07 Jan 2013; Tomáš Chvátal <scarabeus@gentoo.org> +datovka-3.0.3.ebuild:
+  Version bump to latest.
 
 *datovka-3.0.2 (20 Dec 2012)
 
